build/log/idf_py_stderr_output_68132
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:35:26: error: expected identifier or '(' before 'register'
   35 |                 uint16_t register;
      |                          ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:43:27: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'uart_num'
   43 |         const uart_port_t uart_num = UART_NUM_2;
      |                           ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:43:27: error: 'uart_num' undeclared (first use in this function)
/home/bmetal/esp-idf/uartTest/main/uartTest.c:43:27: note: each undeclared identifier is reported only once for each function it appears in
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
